# MongoRolesFastAPI

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: create_app.py  main.py
app/api/: deps.py  utils.py
app/api/api_v1/: api.py  error_messages.py  success_messages.py
app/api/api_v1/routers/: accounts.py  auth.py  roles.py  user_roles.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: __init__.py  account.py  base.py  role.py  user.py  user_role.py
app/db/: init_db.py  session.py
app/models/: __init__.py  account.py  base.py  role.py  user.py  user_role.py
app/schemas/: __init__.py  account.py  role.py  token.py  user.py  user_role.py  validators.py
bash_commands/: startup.sh
tests/: config.py  conftest.py  test_main.py
tests/api/api_v1/: test_accounts.py  test_auth.py  test_roles.py  test_user_roles.py  test_users.py
tests/crud/: test_account.py  test_role.py  test_user.py  test_user_role.py
tests/utils/: user.py  validators.py
