[tool.poetry]
name = "MongoRolesFastAPI_poetry"
version = "0.1.0"
description = ""
authors = ["Cristian Galvis <cjgalvisc@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
umongo = "^3.0.0"
motor = "^2.5.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.8b0"
pytest-cov = "^2.12.1"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
flakehell = "^0.9.0"
requests = "^2.26.0"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"
email-validator = "^1.1.3"

[tool.isort]
use_parentheses = true
reverse_relative = true
include_trailing_comma = false
lines_between_types = 0
multi_line_output = 3
line_length = 79

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
line-length = 79

[tool.flakehell]
max_line_length = 79
max-complexity = 18
show_source = true

[tool.flakehell.plugins]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]

[tool.coverage.run]
include=['./app/*']

[tool.coverage.report]
show_missing=true
include=['./app/*']
sort='-Miss'
precision=2

[tool.coverage.html]
title="MongoRolesFastAPI Coverage Report"
directory="coverage"
show_contexts=true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
